--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vinscape-web",
-  "author": {"name": "Soumya Ranjan"},
+  "author": {
+    "name": "Soumya Ranjan"
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -19,6 +22,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
